--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project1_ryan",
   "version": "1.0.0",
-  "description": "campaign website for Senpai Goku",
+  "description": "campaign website for Son Goku",
   "main": "index.js",
   "directories": {
     "doc": "docs"
